k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hostel-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: hostel-api

  template:
    metadata:
      labels:
        app: hostel-api

    spec:
      containers:
        - name: hostel-api
          image: gnanasundar126/hostel-demo-app:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000
