k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hostel-api-service

spec:
  type: NodePort

  selector:
    app: hostel-api

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30080
